SSG-12319: Fixed issues with validation rules in Publish Swagger Service wizard. Changed buttons in Wizard from private to protected so the behaviour could be overridden properly.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@44264 219f1c6e-4a0e-43c8-96f2-6e749be13fd4